On div.item margin right 0 margin left 10 to fix alignment with right border.

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -236,8 +236,8 @@ div.area_menu a {
 div.item {
 	display: inline-block;
 	vertical-align: top;
-	margin-left: 5px;
-	margin-right: 5px;
+	margin-left: 10px;
+	margin-right: 0px;
 	margin-bottom: 13px;
 	box-sizing: border-box;
 	border: 1px solid @color_text;
